<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrey"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentationn.screens.feature.login.LoginFragment">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newuser"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        >

<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/img"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:src="@drawable/logo"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.25"
        />

    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/linear_background_for_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:hint="@string/username"
        android:ellipsize="end"
        android:inputType="text"
        android:maxLines="1"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/img"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/linear_background_for_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:gravity="center"
        android:layout_marginTop="15dp"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintTop_toBottomOf="@+id/username"
        />
    <EditText
        android:id="@+id/repassword"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/linear_background_for_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/repassword"
        android:inputType="textPassword"
        android:gravity="center"
        android:layout_marginTop="15dp"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintTop_toBottomOf="@+id/password"
        />

    <EditText
        android:id="@+id/phone"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/linear_background_for_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="phone"
        android:layout_marginTop="15dp"
        app:layout_constraintWidth_percent="0.8"
        android:hint="@string/phone"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/repassword"
        />

    <EditText
        android:id="@+id/mail"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/linear_background_for_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="textEmailAddress"
        android:layout_marginTop="15dp"
        app:layout_constraintWidth_percent="0.8"
        android:hint="@string/mail"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/phone"
        />
    <TextView
        android:id="@+id/register"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/linear_background_for_addtocart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.45"
        android:padding="5dp"
        android:layout_marginTop="35dp"
        android:textColor="@color/white"
        android:text="@string/register"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/mail"
        />

    </android.support.constraint.ConstraintLayout>
</ScrollView>

</android.support.constraint.ConstraintLayout>