<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintTop_toTopOf="parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentationn.screens.feature.home.morefragment.MenuFragment">
    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
 >

    <TextView
        android:id="@+id/lang"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/background_for_menu"
        android:drawableLeft="@drawable/ic_arrow"
        android:drawableEnd="@drawable/ic_arrow"
        android:gravity="center_vertical"
        android:padding="12dp"
        android:text=""
        android:textColor="@color/black"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/currency"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/background_for_menu"
        android:drawableEnd="@drawable/ic_arrow"
        android:drawableRight="@drawable/ic_arrow"
        android:gravity="center_vertical"
        android:padding="12dp"
        android:text="@string/cuurency"
        android:textColor="@color/black"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lang" />

    <TextView
        android:id="@+id/contact"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/background_for_menu"
        android:drawableEnd="@drawable/ic_arrow"
        android:drawableRight="@drawable/ic_arrow"
        android:gravity="center_vertical"
        android:padding="12dp"
        android:text="@string/contact"
        android:textColor="@color/black"
        android:textSize="16dp"

        app:layout_constraintTop_toBottomOf="@+id/change_country" />

    <TextView
        android:id="@+id/conditions"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/background_for_menu"
        android:drawableEnd="@drawable/ic_arrow"
        android:drawableRight="@drawable/ic_arrow"
        android:gravity="center_vertical"
        android:padding="12dp"
        android:text="@string/conditions"
        android:textColor="@color/black"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact" />


    <TextView
        android:id="@+id/aboutus"
        app:layout_constraintTop_toBottomOf="@+id/conditions"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:text="@string/aboutus"
        android:textSize="16dp"
        android:padding="12dp"
        android:drawableEnd="@drawable/ic_arrow"
        android:gravity="center_vertical"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        android:layout_marginBottom="8dp"
        android:drawableRight="@drawable/ic_arrow" />


    <TextView
        android:id="@+id/chat"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/background_for_menu"
        android:drawableEnd="@drawable/ic_arrow"
        android:drawableRight="@drawable/ic_arrow"
        android:gravity="center_vertical"
        android:padding="12dp"
        android:text="@string/chat"
        android:textColor="@color/black"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutus" />


    <TextView
        android:id="@+id/change_country"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/background_for_menu"
        android:drawableEnd="@drawable/ic_arrow"
        android:drawableRight="@drawable/ic_arrow"
        android:gravity="center_vertical"
        android:padding="12dp"
        android:text="@string/change_country"
        android:textColor="@color/black"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currency" />


    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:background="@drawable/background_for_menu"
        android:drawableEnd="@drawable/ic_arrow"
        android:drawableRight="@drawable/ic_arrow"
        android:gravity="center_vertical"
        android:padding="12dp"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logout" />

    <TextView
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/background_for_menu"
        android:drawableEnd="@drawable/ic_arrow"
        android:drawableRight="@drawable/ic_arrow"
        android:gravity="center_vertical"
        android:padding="12dp"
        android:text="@string/loout"
        android:textColor="@color/black"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chat" />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>