<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/colorPrimary">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:background="@drawable/cach" />

    </RelativeLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bank"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />


        <TextView
            android:id="@+id/bankname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/bankname"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        <TextView
            android:id="@+id/banknamevalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text=" Bank Muscat "
            app:layout_constraintStart_toEndOf="@id/bankname"
            app:layout_constraintTop_toBottomOf="@+id/title"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />



        <TextView
            android:id="@+id/benifitname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/benfitname"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bankname"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        <TextView
            android:id="@+id/benifitnamevalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="  SHOPGATE  "
            app:layout_constraintStart_toEndOf="@id/benifitname"
            app:layout_constraintTop_toBottomOf="@+id/bankname"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />




        <TextView
            android:id="@+id/accountnum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/accountnum"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/benifitname"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/accountnumvalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="  0317051679970018  "
            app:layout_constraintStart_toEndOf="@id/accountnum"
            app:layout_constraintTop_toBottomOf="@+id/benifitname"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/notes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/accountnum"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/hinttext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notesvalue"
            android:gravity="start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hint"
            android:textColor="@color/gray"
            android:textAlignment="center"
            android:textSize="13sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <Button
            android:id="@+id/buttonOk"
            android:layout_width="00dp"
            app:layout_constraintWidth_percent="0.4"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hinttext"
            android:background="@drawable/button_background"
            android:text="@string/ok"
            android:textColor="@color/colorPrimary" />


        <Button
            android:id="@+id/buttoncancel"
            android:layout_width="00dp"
            app:layout_constraintWidth_percent="0.4"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hinttext"
            android:background="@drawable/button_background"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary" />


    </android.support.constraint.ConstraintLayout>

</LinearLayout>