<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/product_back"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentationn.screens.feature.home.subcategryfragment.SubcategryFragment">

    <TextView
        android:id="@+id/head_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.95" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/subcategry_Rec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="150dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintTop_toBottomOf="@+id/head_title" />

    <TextView
        android:id="@+id/text"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.95"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subcategry_Rec"
        android:text="@string/more_sale"
        android:textStyle="bold"
        android:textSize="18sp"
        android:visibility="gone"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/product_Rec"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/product_Rec"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/text"
        app:layout_constraintBottom_toBottomOf="parent"
        />


    <TextView
        android:id="@+id/product_notfound"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/notfound"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/text"
        app:layout_constraintBottom_toBottomOf="parent"
        />


    <FrameLayout
        android:id="@+id/progress"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>